tests/invalid_nodepend/pragma_source_file.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- pragma source_file("x.m").
:- module pragma_source_file.

:- interface.

:- type x ---> x.

:- an_error.
